# e-monkeys.tech

./: .gitmodules  docker-compose.yml  init.sh
.github/workflows/: build-images.yml
Fractals/: Fractals.cabal  Fractals.hi  Fractals.hs  LineGraphics.hi
Fractals/app/: Main.hs
Fractals/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
blog/: Dockerfile  config.toml
blog/content/about/: index.md
blog/content/posts/: _index.md  draw_logo.md  e-monkeys_origine.md
config/: app.ini
docs/: Dockerfile  book.toml
docs/book/: 404.html  index.html  migrate_tomcat.html  print.html  searchindex.js  searchindex.json  to_lower.html
docs/src/: SUMMARY.md  migrate_tomcat.md  to_lower.md
www/: Cargo.toml  index.html
www/src/: main.rs
www/static/: index.html
www/static/css/: main.css
