name: Fractals
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends:
    , base              ^>=4.12
    , JuicyPixels       ^>=3.3.5
    , Rasterific        ^>=0.7.5.4
stability: experimental
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
extra-doc-files:
Executable Fractals
  main-is: app/Main.hs
  buildable: True
  build-tools:
  cpp-options:
  cc-options:
  ld-options:
  pkgconfig-depends:
  frameworks:
  c-sources:
  default-language:
  other-languages:
  default-extensions:
  other-extensions:
  extensions:
  extra-libraries:
  extra-lib-dirs:
  includes:
  install-includes:
  include-dirs:
  hs-source-dirs:
  other-modules: LineGraphics
  ghc-prof-options:
  ghc-shared-options:
  ghc-options:
  hugs-options:
  nhc98-options:
  jhc-options:
